k3s-manifests/job-scout/overlays/preview/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-scout
spec:
  template:
    spec:
      containers:
        - name: job-scout
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
